--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.116",
+    "lodash": "^4.17.10",
     "mongoose": "^5.2.14",
     "server": "^1.0.18"
   }
