--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.116",
+    "@types/mongoose": "^5.2.12",
     "@types/server": "^1.0.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.14",
